--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lawreay IT Builder</title>
-    <link rel="stylesheet" href="https://unpkg.com/grapesjs/dist/css/grapes.min.css">
+    <title>Welcome</title>
 </head>
 <body>
-
-    <div id="editor"></div>
-
-    <script src="https://unpkg.com/grapesjs"></script>
-    <script src="script.js"></script>
-
+    <h1>Welcome to Lawreay IT!</h1>
 </body>
 </html>
